objects/NVMStatsSF__NVM_Agent_Summary__c.object
<CustomObject>
    <fields>
        <fullName>NVMStatsSF__AgentID__c</fullName>
        <label>AgentID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Agent</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NVM_Agent_Summary</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Away_Time__c</fullName>
        <inlineHelpText>Away Time in seconds</inlineHelpText>
        <label>Away Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Away_Time_hh_mm_ss__c</fullName>
        <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Away_Time__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; + 
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Away_Time__c, 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Away Time rounded to nearest minute</inlineHelpText>
        <label>Away Time (hh:mm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__ChkStr__c</fullName>
        <label>ChkStr</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Date__c</fullName>
        <inlineHelpText>UTC Date</inlineHelpText>
        <label>UTC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Day_of_Week__c</fullName>
        <formula>IF(ISNULL( NVMStatsSF__Local_Date__c),
CASE(MOD(NVMStatsSF__Date__c - DATE(1900, 1, 6), 7),
2, &apos;1-Monday&apos;,
3, &apos;2-Tuesday&apos;,
4, &apos;3-Wednesday&apos;,
5, &apos;4-Thursday&apos;,
6, &apos;5-Friday&apos;,
0, &apos;6-Saturday&apos;,
1, &apos;7-Sunday&apos;, &apos; &apos;),
CASE(MOD(NVMStatsSF__Local_Date__c - DATE(1900, 1, 6), 7),
2, &apos;1-Monday&apos;,
3, &apos;2-Tuesday&apos;,
4, &apos;3-Wednesday&apos;,
5, &apos;4-Thursday&apos;,
6, &apos;5-Friday&apos;,
0, &apos;6-Saturday&apos;,
1, &apos;7-Sunday&apos;, &apos; &apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Day numbering from Monday=1, based on Local Date, defaulting to UTC Date if Local Date Absent</inlineHelpText>
        <label>Day of Week</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Extended_Away_Time__c</fullName>
        <inlineHelpText>Extended Away Time in seconds</inlineHelpText>
        <label>Extended Away Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Extended_Away_Time_hh_mm_ss__c</fullName>
        <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Extended_Away_Time__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; +  
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Extended_Away_Time__c, 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Extended Away Time rounded to nearest minute</inlineHelpText>
        <label>Extended Away Time (hh:mm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Fault_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Sum of times in Fault on Line and Network Congestion states in seconds</inlineHelpText>
        <label>Fault Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__First_Login_Time__c</fullName>
        <label>First Activity DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Fiscal_Quarter__c</fullName>
        <formula>CASE(MONTH( NVMStatsSF__Date__c ) , 
1, &quot;Q1-&quot;+ TEXT(year( NVMStatsSF__Date__c )), 
 2, &quot;Q1-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
 3, &quot;Q1-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
 4, &quot;Q2-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
 5, &quot;Q2-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
 6, &quot;Q2-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
 7, &quot;Q3-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
 8, &quot;Q3-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
 9, &quot;Q3-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
 10, &quot;Q4-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
 11, &quot;Q4-&quot;+ TEXT(year(NVMStatsSF__Date__c)), 
 12, &quot;Q4-&quot;+ TEXT(year(NVMStatsSF__Date__c)), &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fiscal Quarter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Hold_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total time in seconds that this agent put interactions on hold</inlineHelpText>
        <label>Hold Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__IEvtStr__c</fullName>
        <inlineHelpText>Interaction Event String - system use only</inlineHelpText>
        <label>IEvtStr</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Inbond_Xfer_Call_Time_hh_mm__c</fullName>
        <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Inbound_Transfer_Time__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; + 
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Inbound_Transfer_Time__c, 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inbound Transfer Time rounded to the nearest minute</inlineHelpText>
        <label>Inbound Transfer Time (hh:mm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Inbound_Call_Time__c</fullName>
        <inlineHelpText>Inbound Call Time in seconds</inlineHelpText>
        <label>Inbound Call Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Inbound_Call_Time_hh_mm_ss__c</fullName>
        <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Inbound_Call_Time__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; + 
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Inbound_Call_Time__c, 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Inbound Call Time rounded to the nearest minute</inlineHelpText>
        <label>Inbound Call Time (hh:mm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Inbound_Transfer_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Inbound Transfer Time in seconds - includes both Busy Internal (consult time) and Transfer In (completed warm transfer time)</inlineHelpText>
        <label>Inbound Transfer Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Interrupted_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total duration in seconds interactions were interrupted on this agent day</inlineHelpText>
        <label>Interrupted Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Key_Event_String__c</fullName>
        <description>Reserved for System Use; field for tracking Agent State Event Stream</description>
        <inlineHelpText>Reserved for System Use; field for tracking Agent State Event Stream</inlineHelpText>
        <label>Key Event String</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Last_Logout_DateTime__c</fullName>
        <label>Last Activity DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Line_Busy_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total amount of time in seconds spent in Line Busy</inlineHelpText>
        <label>Line Busy Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Line_Busy_Time_hh_mm__c</fullName>
        <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Line_Busy_Time__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; + 
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Line_Busy_Time__c, 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Line Busy Time rounded to the nearest minute</inlineHelpText>
        <label>Line Busy Time (hh:mm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Local_Date__c</fullName>
        <inlineHelpText>Date from the Agent&apos;s perspective, respecting local DST</inlineHelpText>
        <label>Local Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Local_ISO8601_Week__c</fullName>
        <inlineHelpText>Week number in ISO8601 form of the Agent&apos;s local time</inlineHelpText>
        <label>Local ISO8601 Week</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Logged_in_Time_hh_mm_ss__c</fullName>
        <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Time_Logged_In__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; + 
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Time_Logged_In__c, 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total State Time for this Agent Day rounded to the nearest minute</inlineHelpText>
        <label>Total State Time (hh:mm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Longest_State__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Longest time in seconds the agent spent in a single state</inlineHelpText>
        <label>Longest State Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Month_of_Year__c</fullName>
        <formula>CASE(MONTH( NVMStatsSF__Date__c ) , 
1, &quot;(1) Jan&quot;, 
2, &quot;(2) Feb&quot;, 
3, &quot;(3) Mar&quot;, 
4, &quot;(4) Apr&quot;, 
5, &quot;(5) May&quot;, 
6, &quot;(6) Jun&quot;, 
7, &quot;(7) Jul&quot;, 
8, &quot;(8) Aug&quot;, 
9, &quot;(9) Sep&quot;, 
10, &quot;(10) Oct&quot;, 
11, &quot;(11) Nov&quot;, 
12, &quot;(12) Dec&quot;, &quot; &quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Month of Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__No_Answer_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total time in seconds that the Agent spent in No Answer state</description>
        <inlineHelpText>Total time in seconds that the Agent spent in No Answer state</inlineHelpText>
        <label>No Answer Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__No_Answers_to_Consult__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times this Agent was invited to a Consultation but did not answer</inlineHelpText>
        <label>No Answers to Consult</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Aways__c</fullName>
        <label>Number of Aways</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Extended_Away__c</fullName>
        <label>Number of Extended Aways</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Holds__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times this agent initiated a hold for a customer</inlineHelpText>
        <label>Number of Holds</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Inbound_Calls_FORMULA__c</fullName>
        <formula>NVMStatsSF__Number_of_Inbound_Calls__c +  NVMStatsSF__Number_of_Inbound_Transfers__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>All calls inbound to this agent including ones delivered via ACD or transfer</inlineHelpText>
        <label>Number of Inbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Inbound_Calls__c</fullName>
        <label>Number of Agent Selected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Inbound_Transfers__c</fullName>
        <inlineHelpText>Number of Calls transferred to the agent directly from another Agent (not through a queue transfer)</inlineHelpText>
        <label>Number of Inbound Transfers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Interrupts__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times interactions were interrupted on this agent day</inlineHelpText>
        <label>Number of Interrupts</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Line_Busy__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times the agent went Line Busy</inlineHelpText>
        <label>Number of Line Busy</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Logins__c</fullName>
        <label>Number of Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Logouts__c</fullName>
        <label>Number of Logouts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_No_Answers__c</fullName>
        <label>Number of No Answers</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Outbound_Calls__c</fullName>
        <label>Number of Outbound Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Parks__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times interactions were parked on this agent day</inlineHelpText>
        <label>Number of Parks</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Times_Consulted__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Number of times this Agent was invited to a consultation on an Interaction</inlineHelpText>
        <label>Number of Times Consulted</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Wrap_Phases__c</fullName>
        <inlineHelpText>Counts a series of consecutive wraps (e.g. Auto then Manual Wrap) as a single Wrap phase</inlineHelpText>
        <label>Number of Wrap Phases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Number_of_Wraps__c</fullName>
        <label>Number of Wraps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Numeric_Week_of_Year__c</fullName>
        <formula>VALUE( NVMStatsSF__Week_of_Year__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Numeric Week of Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Outbound_Call_Time__c</fullName>
        <inlineHelpText>Outbound Call Time in seconds</inlineHelpText>
        <label>Outbound Call Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Outbound_Call_Time_hh_mm_ss__c</fullName>
        <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Outbound_Call_Time__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; + 
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Outbound_Call_Time__c, 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Outbound Call Time rounded to the nearest minute</inlineHelpText>
        <label>Outbound Call Time (hh:mm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Park_Time__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Total duration in seconds interactions were parked on this agent day</inlineHelpText>
        <label>Park Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Ready_Outbound_Time_hh_mm_ss__c</fullName>
        <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Ready_for_Outbound_Time__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; + 
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Ready_for_Outbound_Time__c, 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ready For Outbound Time rounded to the nearest minute</inlineHelpText>
        <label>Ready For Outbound Time (hh:mm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Ready_Time__c</fullName>
        <inlineHelpText>Ready Time in seconds</inlineHelpText>
        <label>Ready Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Ready_Time_hh_mm_ss__c</fullName>
        <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Ready_Time__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; + 
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Ready_Time__c, 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Ready Time rounded to the nearest minute</inlineHelpText>
        <label>Ready Time (hh:mm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Ready_for_Outbound_Time__c</fullName>
        <inlineHelpText>Ready for Outbound Time in seconds</inlineHelpText>
        <label>Ready For Outbound Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Role__c</fullName>
        <inlineHelpText>User&apos;s role on the day this summary was created</inlineHelpText>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__State_List__c</fullName>
        <inlineHelpText>Delimited list of re-labelled States and durations in the format [State]-[Duration(s)], [State]-[Duration(s)],...</inlineHelpText>
        <label>State List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Time_Logged_In__c</fullName>
        <inlineHelpText>Total State time for this Agent Day in seconds excluding Logged Out state</inlineHelpText>
        <label>Total State Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Time_Zone__c</fullName>
        <inlineHelpText>Time Zone of this Agent - inherited from the User Record carrying the same NVM Agent ID or defaulted to the Time Zone of the Channel transaction which fetched the data</inlineHelpText>
        <label>Time Zone</label>
        <length>64</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__UTC_ISO8601_Week__c</fullName>
        <inlineHelpText>Week number in ISO8601 form of the date in UTC</inlineHelpText>
        <label>UTC ISO8601 Week</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Version__c</fullName>
        <inlineHelpText>Version number of the Package which created this Summary</inlineHelpText>
        <label>Version</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Week_of_Year__c</fullName>
        <formula>TEXT(IF( 
CEILING(( NVMStatsSF__Date__c  - DATE(YEAR(NVMStatsSF__Date__c), 1, 1) + 1)/7) &gt; 52, 52, CEILING((NVMStatsSF__Date__c - DATE(YEAR(NVMStatsSF__Date__c), 1, 1) + 1)/7) 
))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Week of Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Wrap_Time_hh_mm__c</fullName>
        <formula>TRIM(LPAD(TEXT(FLOOR(NVMStatsSF__Wrap_Up_Time__c/3600)), 8, &quot;      00&quot;) + &quot;:&quot; + 
LPAD(TEXT(ROUND(MOD(NVMStatsSF__Wrap_Up_Time__c , 3600)/60 , 0)), 2, &quot;0&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Wrap Time rounded to the nearest minute</inlineHelpText>
        <label>Wrap Time (hh:mm)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__Wrap_Up_Time__c</fullName>
        <inlineHelpText>Total Wrap Time in seconds</inlineHelpText>
        <label>Wrap Up Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NVMStatsSF__dateAgentId__c</fullName>
        <description>Used as unique and INDEXED key to find a summary of an agent&apos;s calls on a given day.  We may need to suffix this with Channel if any agents on different NVM clouds have matching Agent IDs.</description>
        <externalId>true</externalId>
        <label>dateAgentId</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>NVM Agent Summary</label>
    <listViews>
        <fullName>NVMStatsSF__All</fullName>
        <columns>NAME</columns>
        <columns>NVMStatsSF__AgentID__c</columns>
        <columns>NVMStatsSF__Agent__c</columns>
        <columns>NVMStatsSF__Date__c</columns>
        <columns>NVMStatsSF__First_Login_Time__c</columns>
        <columns>NVMStatsSF__Last_Logout_DateTime__c</columns>
        <columns>NVMStatsSF__Logged_in_Time_hh_mm_ss__c</columns>
        <columns>NVMStatsSF__Ready_Time_hh_mm_ss__c</columns>
        <columns>NVMStatsSF__Inbound_Call_Time_hh_mm_ss__c</columns>
        <columns>NVMStatsSF__Outbound_Call_Time_hh_mm_ss__c</columns>
        <columns>NVMStatsSF__Wrap_Up_Time__c</columns>
        <columns>NVMStatsSF__Number_of_No_Answers__c</columns>
        <columns>NVMStatsSF__Number_of_Inbound_Calls__c</columns>
        <columns>NVMStatsSF__Number_of_Aways__c</columns>
        <columns>NVMStatsSF__Number_of_Extended_Away__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NVMStatsSF__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ASR-{0000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NVM Agent Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>